# Sorahk

./: .gitignore  CHANGELOG.md  Cargo.toml  Config.toml  Cross.toml  README.md  TESTING.md  build.rs  run_tests.bat
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-25-egui-unification.md
docs/superpowers/specs/: 2026-04-25-egui-unification-design.md
resources/: sorahk.rc
src/: about.rs  config.rs  gui.rs  i18n.rs  input_manager.rs  input_ownership.rs  keyboard.rs  lib.rs  main.rs  mouse.rs  rawinput.rs  sequence_matcher.rs  signal.rs  state.rs  tray.rs  util.rs  xinput.rs
src/gui/: about_dialog.rs  device_info.rs  device_manager_dialog.rs  error_dialog.rs  fonts.rs  hid_activation_dialog.rs  main_window.rs  mod.rs  mouse_direction_dialog.rs  mouse_scroll_dialog.rs  rule_properties_dialog.rs  settings_dialog.rs  theme.rs  types.rs  utils.rs  widgets.rs
src/gui/settings_dialog/: capture.rs  general.rs  helpers.rs  mapping_editor.rs  mapping_list.rs  mod.rs  process_list.rs
src/i18n/: accessors.rs  en.rs  ja.rs  ko.rs  mod.rs  raw_key.rs  tests.rs  zh_cn.rs  zh_tw.rs
src/state/: handlers.rs  mod.rs  parsing.rs  simulation.rs  tests.rs  types.rs
tests/: example_test_guide.rs  integration_tests.rs  state_tests.rs
