[package]
name = "sorahk"
version = "0.2.0"
edition = "2024"

[build-dependencies]
embed-resource = "3.0.6"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Data_Xml_Dom",
    "UI_Notifications",
] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
anyhow = "1.0.100"
eframe = "0.33.2"
egui = "0.33.2"
ico = "0.4"
rfd = "0.15.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
