[package]
name = "sorahk"
version = "0.4.0"
edition = "2024"

[lib]
name = "sorahk"
path = "src/lib.rs"

[[bin]]
name = "sorahk"
path = "src/main.rs"

[build-dependencies]
embed-resource = "3.0.6"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_Devices_HumanInterfaceDevice",
    "Data_Xml_Dom",
    "UI_Notifications",
] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
anyhow = "1.0.100"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow"] }
ico = "0.5.0"
rfd = { version = "0.16.0", default-features = false }
scc = "3.4.7"
smallvec = { version = "1.15.1", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
